--- a/popup.css
+++ b/popup.css
@@ -1,10 +1,9 @@
 body {
-    box-sizing: border-box;
-    font-family: monospace;
+    font-family: sans-serif;
     display: grid;
-    height: 90vh;
+    height: 100vh;
     place-items: center;
-   }
+  }
   
   .base-timer {
     position: relative;
@@ -12,9 +11,8 @@ body {
     height: 300px;
   }
   
-  /* scaleX(1) = CLOCKWISE, scaleX(-1) = ANTI-CLOCKWISE */
   .base-timer__svg {
-    transform: scaleX(1);
+    transform: scaleX(-1);
   }
   
   .base-timer__circle {
@@ -37,8 +35,16 @@ body {
     stroke: currentColor;
   }
   
-  .base-timer__path-remaining.arc {
-    color: rgba(179, 48, 102, 0.973)
+  .base-timer__path-remaining.green {
+    color: rgb(65, 184, 131);
+  }
+  
+  .base-timer__path-remaining.orange {
+    color: orange;
+  }
+  
+  .base-timer__path-remaining.red {
+    color: red;
   }
   
   .base-timer__label {
@@ -50,35 +56,4 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 48px;
-  }
-  
-  .buttons {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  
-  .buttons button {
-    margin: 1rem;
-    border: none;
-    background-color: beige;
-    width: 100px;
-    height: 50px;
-    border-radius: 5px;
-    padding: .3rem;
-    font-size: 1.1rem;
-  }
-  
-  .buttons button:hover {
-    background-color: rgba(179, 48, 102, 0.973);
-    color: white;
-  }
-  
-  .buttons button:disabled {
-    cursor: not-allowed;
-  }
-  .buttons button:disabled:hover{
-    background-color:beige;
   }
