--- a/popup.css
+++ b/popup.css
@@ -13,15 +13,28 @@ body{
 
 }
 
-#time{
+#time
+{
     display: flex;
     gap: 30px;
 }
 
-#time.circle{
+#time.circle
+{
     position: relative;
     width: 150px;
     height: 150px;
     justify-content: center;
     align-items: center;
 }
+
+#time .circle svg circle
+{
+    width: 100%;
+    height: 100%;
+    fill: transparent;
+    stroke-width: 8;
+    stroke: crimson;
+    transform: translate(5px, 5px);
+}
+
