--- a/popup.css
+++ b/popup.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Courier New', Courier, monospace;
+    align-items: center;
 }
 
 body{
@@ -38,3 +39,9 @@ body{
     transform: translate(5px, 5px);
 }
 
+
+#time .circle svg circle:nth-child(2)
+{
+    stroke: var(--clr);
+    stroke-dasharray: 440;
+}
