--- a/audio.css
+++ b/audio.css
@@ -1,11 +1,41 @@
-body {
+main{
+    width: 600px;
+    height: 900px;
+}
+
+body 
+{
+
+    border: 2px solid red;
+
+    width: 600px;
+    height: 900px;
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+
+    background-image: url("Assets/background.png");
+    background-clip: border-box;
+    background-size: 700px;
+    background-repeat: no-repeat;
+    
+    
+    
 }
 
-button {
-    padding: 10px 20px;
+button
+{
+    /*padding: 10px 20px;*/
     font-size: 16px;
+    cursor: pointer;
+}
+
+img
+{
     cursor: pointer;
 }
