--- a/popup.css
+++ b/popup.css
@@ -45,3 +45,36 @@ body{
     stroke: var(--clr);
     stroke-dasharray: 440;
 }
+  
+#button .mentalSupport 
+{
+    position: fixed;
+    bottom: 10;
+    right: 25;  
+    background-color: #faf7ff;
+    border: 2px solid #8c6ebc;
+    color: #8c6ebc;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;
+    transition-duration: 0.4s;
+    
+  }
+
+  #button .mentalSupport {border-radius: 12px;}
+
+  #button .mentalSupport {
+    transition-duration: 0.4s;
+  }
+  
+  #button .mentalSupport:hover {
+    background-color: #6666d1;
+    color: white;
+  }
+  
+  
+
