--- a/audio.css
+++ b/audio.css
@@ -12,12 +12,12 @@ body
     height: 900px;
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 20px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin: 0px;
 
     background-image: url("Assets/background.png");
     background-clip: border-box;
@@ -39,3 +39,29 @@ img
 {
     cursor: pointer;
 }
+
+.audioUI
+{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+#currentFile
+{
+    color: blueviolet;
+    font-size: x-large;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0px;
+    flex-shrink: 1;
+}
+
+#playImage,
+ #pauseImage
+{
+    margin: 0px;
+    flex-shrink: 0;
+}
+
