--- a/audio.css
+++ b/audio.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: Akshar;
-    src: url(Assets/Fonts/Akshar-Medium.ttf) format("ttf");
+    src: url(Assets/Fonts/Akshar-Medium.ttf) format("truetype");
 }
+
 
 main{
     width: 600px;
@@ -52,15 +53,30 @@ img
   align-items: center;
   padding: 0px;
   margin: 0px;
+  /*flex-direction: column;*/
+  gap: 10px;
 }
 
 #currentFile
 {
     color: blueviolet;
-    font-size: x-large;
-    font-family: 'Akshar';
+    font-size: xx-large;
+    font-family: "Akshar", Arial, Helvetica, sans-serif;
     margin: 0px;
-    flex-shrink: 1;
+    text-align: center;
+    font-weight: bold;
+}
+
+#playingText
+{
+    color:darkmagenta;
+    font-size: xx-large;
+    font-family: "Akshar", Arial, Helvetica, sans-serif;
+    margin-top: 0px;
+    padding: 0px;
+    text-align: center;
+    font-stretch: extra-expanded;
+    
 }
 
 #playImage,
