--- a/popup.css
+++ b/popup.css
@@ -10,7 +10,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 250px;
+    min-width:425px;
 
 }
 
@@ -83,6 +84,7 @@ body{
     background-color: #8c6ebc;
     color: white;
   }
+  
   
   
 
