--- a/todostyle.css
+++ b/todostyle.css
@@ -6,11 +6,10 @@
 }
 
 .container{
-width:100%;
-min-height: 100vh;
-background: linear-gradient(140deg, #35569a, #4e085f);
-padding: 10px;
-
+    width:100%;
+    min-height: 100vh;
+    background: linear-gradient(140deg, #35569a, #4e085f);
+    padding: 10px;
 }
 
 .todo-app{
@@ -20,4 +19,15 @@ padding: 10px;
     margin: 100px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
+}
+
+.todo-app h2{
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.todo-app h2 img{
+    width: 30px;
 }
