--- a/audio.css
+++ b/audio.css
@@ -3,19 +3,33 @@
     src: url(Assets/Fonts/Akshar-Medium.ttf) format("truetype");
 }
 
+/*
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60073, 0 0 20px #e60073, 0 0 25px #e60073, 0 0 30px #e60073;
+    }
+    to {
+      text-shadow: 0 0 10px #fff, 0 0 15px #ff4da6, 0 0 20px #ff4da6, 0 0 25px #ff4da6, 0 0 30px #ff4da6, 0 0 35px;
+    }
+  }
+*/
+
+
+
 
 main{
-    width: 600px;
-    height: 900px;
+    width: 300px;
+    height: 450px;
+    border-radius: 20px;
 }
 
 body 
 {
-
+    border-radius: 20px;
     border: 2px solid red;
 
-    width: 600px;
-    height: 900px;
+    width: 300px;
+    height: 450px;
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 0px;
@@ -27,7 +41,7 @@ body
 
     background-image: url("Assets/background.png");
     background-clip: border-box;
-    background-size: 700px;
+    background-size: 310px;
     background-repeat: no-repeat;
     
     
@@ -37,7 +51,7 @@ body
 button
 {
     /*padding: 10px 20px;*/
-    font-size: 16px;
+    font-size: 8px;
     cursor: pointer;
 }
 
@@ -54,30 +68,37 @@ img
   padding: 0px;
   margin: 0px;
   /*flex-direction: column;*/
-  gap: 10px;
+  gap: 5px;
 }
 
 .titleDisplay
 {
     display: flex;
     align-items: center;
-    gap: 10px;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0px;
+    position: relative;
+    bottom: 25px;
+    
 }
 
 #currentFile
 {
     color: blueviolet;
-    font-size: xx-large;
+    font-size: xx-large/2;
     font-family: "Akshar", Arial, Helvetica, sans-serif;
     margin: 0px;
     text-align: center;
     font-weight: bold;
+    /*-webkit-animation: glow 1s ease-in-out infinite alternate;*/
+    
 }
 
 #playingText
 {
     color:darkmagenta;
-    font-size: xx-large;
+    font-size: xx-large/2;
     font-family: "Akshar", Arial, Helvetica, sans-serif;
     margin-top: 0px;
     padding: 0px;
@@ -91,5 +112,6 @@ img
 {
     margin: 0px;
     flex-shrink: 0;
+    height: 50%;
 }
 
