--- a/Inactive Files/trial.css
+++ b/Inactive Files/trial.css
@@ -1,10 +1,12 @@
+
+/*
 body {
     box-sizing: border-box;
     font-family: monospace;
     display: grid;
     height: 90vh;
     place-items: center;
-   }
+   }*/
   
   .base-timer {
     position: relative;
