--- a/todostylenew.css
+++ b/todostylenew.css
@@ -7,3 +7,45 @@
     --pink: #ec4899;
     --purple: #8B5Cf6;
 }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: "Fira sans", sans-seif;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: var(--dark);
+    colour: #FFF;
+}
+header{
+    padding: 2rem 1rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+header h1{
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: var(--gray);
+    margin-bottom: 1rem;
+}
+#new-text-form{
+    display: flex;
+}
+input, button{
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+}
+#new-task-input{
+    flex: 1 1 0%;
+    background-color: var(--darker);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-radius: 1rem;
+    color: var(--light);
+    font-size: 1.25rem;
+}
