--- a/todostylenew.css
+++ b/todostylenew.css
@@ -56,8 +56,7 @@ input, button{
     color: var(--pink);
     font-size: 1.25rem;
     font-weight: 700;
-    background-image: linear-gradient(to right, var(--pink));
-    var(--purple);
+    background-image: linear-gradient(to right, var(--pink), var(--purple));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     cursor: pointer;
@@ -67,5 +66,5 @@ input, button{
     opacity: 0.8;
 }
 #new-task-submit:active{
-    opacity: 0.67;
+    opacity: 0.6;
 }
