--- a/todostylenew.css
+++ b/todostylenew.css
@@ -92,13 +92,14 @@ main{
     border-radius: 1rem;
     margin-bottom: 1rem;
 }
+/*
 #tasks .task .content .text{
     color: var(--light);
     font-size: 1.125rem;
-    font-width: 100%;
+    width: 100%;
     display: block;
     transition: 0.4s;
 }
 #tasks .task .content .text:not(:read-only){
     color: var(--pink);
-}
+}*/
