--- a/todostylenew.css
+++ b/todostylenew.css
@@ -84,7 +84,7 @@ main{
     color: var(--gray);
     margin-bottom: 1rem;
 }
-#tasks .task{
+#tasks .task {
     display: flex;
     justify-content: space-between;
     background-color: var(--darkest);
@@ -92,14 +92,50 @@ main{
     border-radius: 1rem;
     margin-bottom: 1rem;
 }
-/*
-#tasks .task .content .text{
-    color: var(--light);
-    font-size: 1.125rem;
-    width: 100%;
-    display: block;
-    transition: 0.4s;
+.task .content {
+	flex: 1 1 0%;
 }
-#tasks .task .content .text:not(:read-only){
-    color: var(--pink);
-}*/
+
+.task .content .text {
+	color: var(--light);
+	font-size: 1.125rem;
+	width: 100%;
+	display: block;
+	transition: 0.4s;
+}
+
+.task .content .text:not(:read-only) {
+	color: var(--pink);
+}
+
+.task .actions {
+	display: flex;
+	margin: 0 -0.5rem;
+}
+
+.task .actions button {
+	cursor: pointer;
+	margin: 0 0.5rem;
+	font-size: 1.125rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	transition: 0.4s;
+}
+
+.task .actions button:hover {
+	opacity: 0.8;
+}
+
+.task .actions button:active {
+	opacity: 0.6;
+}
+
+.task .actions .edit {
+	background-image: linear-gradient(to right, var(--pink), var(--purple));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.task .actions .delete {
+	color: crimson;
+}
