--- a/todostylenew.css
+++ b/todostylenew.css
@@ -5,7 +5,13 @@
     --gray: #6B7280;
     --light: #EEE;
     --pink: #ec4899;
-    --purple: #8B5Cf6;
+    --purple: #8c28ff;
+    --betterpurple: #c792ea;
+    --graypurple: #9d85a1;
+    --grayblue: #8885a1;
+    --smokeyblue: #7671a6;
+    --lightmagenta: #b0869e;
+    --graymagenta: #7a6a74;
 }
 * {
     box-sizing: border-box;
@@ -16,20 +22,25 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: var(--dark);
-    colour: #FFF;
+    background: var(--graymagenta);
+    color: #FFF;
 }
 header{
     padding: 2rem 1rem;
     max-width: 800px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto; 
 }
 header h1{
+    color: var(--pink);
     font-size: 2.5rem;
     font-weight: 300;
-    color: var(--gray);
+    background-image: linear-gradient(to right, var(--betterpurple), var(--purple));
     margin-bottom: 1rem;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    cursor: pointer;
+    transition: 0.4s;
 }
 #new-text-form{
     display: flex;
@@ -45,16 +56,16 @@ input, button{
     background-color: var(--darker);
     padding: 1rem;
     border-radius: 1rem;
-    margin-radius: 1rem;
+    margin: 1rem;
     color: var(--light);
     font-size: 1.25rem;
-}
+}   
 #new-task-input :placeholder{
     color: var(--gray);
 }
 #new-task-submit{
     color: var(--pink);
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 700;
     background-image: linear-gradient(to right, var(--pink), var(--purple));
     -webkit-background-clip: text;
@@ -79,9 +90,9 @@ main{
     padding: 1rem;
 }
 .task-list h2{
-    font-size: 1.5rem;
+    font-size: 2.0rem;
     font-weight: 300;
-    color: var(--gray);
+    color: var(--purple);
     margin-bottom: 1rem;
 }
 #tasks .task {
@@ -137,5 +148,5 @@ main{
 }
 
 .task .actions .delete {
-	color: crimson;
+	color: var(--pink);
 }
