--- a/todostylenew.css
+++ b/todostylenew.css
@@ -16,7 +16,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    p{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-seif};
+    p{font-family: "Akshar", Arial, Helvetica, sans-serif;}
 }
 body{
     display: flex;
