--- a/popup.css
+++ b/popup.css
@@ -15,68 +15,19 @@ body{
 
 }
 
-/*
-#time
-{
-    display: flex;
-    gap: 30px;
-}
-
-#time.circle
-{
-    position: relative;
-    width: 150px;
-    height: 150px;
-    justify-content: center;
-    align-items: center;
-}
-
-#time .circle svg circle
-{
-    width: 100%;
-    height: 100%;
-    fill: transparent;
-    stroke-width: 8;
-    stroke: crimson;
-    transform: translate(5px, 5px);
-}
-
-
-#time .circle svg circle:nth-child(2)
-{
-    stroke: var(--clr);
-    stroke-dasharray: 440;
-}
-*/
-
 #help
 { 
     margin: 1px;
     border: none;
     background-color: rgb(186, 178, 249);
     color: rgb(255, 255, 255);
-    width: 70px;
+    width: 80px;
     height: 30px;
     border-radius: 5px;
     padding: .3px;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     
-    /*background-color: #faf7ff;
-    border: 2px solid #8c6ebc;
-    border-radius: 8px;
-    color: #8c6ebc;
-    padding: 5px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    display: inline-block;
-    margin: 4px 2px;
-    cursor: pointer;
-    width: 40px;
-    transition-duration: 0.4s;*/
   }
   
   
@@ -86,7 +37,23 @@ body{
     color: white;
   }
   
-  
-  
-  
+  #image > *{
+    animation: fly 5s linear 1;
+    /*top: 1000;
+    left:0;
+    position: fixed;
+    z-index: 999;
+    pointer-events: none;*/
+}
 
+@keyframes fly {
+    0% {
+        transform: translate(0, 110vh);opacity: .50;
+    }
+    50% {
+        transform: translate(110vw,0);opacity: 1;
+    }
+    100% {
+        transform: translate(0, 110vh);opacity: .50;
+    }
+}
