--- a/todostylenew.css
+++ b/todostylenew.css
@@ -17,17 +17,37 @@
     box-sizing: border-box;
     margin: 0;
     p{font-family: "Akshar", Arial, Helvetica, sans-serif;}
+    
 }
 body{
+    width: 480px;
+    height: 1000px;
+    font-family: Arial, sans-serif;
+    
+    padding: 0px;
+    padding-top: 50px;
+    
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    background: var(--graymagenta);
-    color: #FFF;
+    align-items: center;
+    
+
+    
+
+    margin: 0px;
+    margin-top: 10px;
+    background-image: url("Assets/background(more_pixel)(larger).png");
+    background-clip: border-box;
+    background-size: 500px;
+    background-repeat: no-repeat;
+    height: 100%;
+    
+
+    justify-items: center;
 }
 header{
     padding: 2rem 1rem;
-    max-width: 800px;
+    max-width: 500px;
     width: 100%;
     margin: 0 auto; 
 }
