--- a/todostylenew.css
+++ b/todostylenew.css
@@ -21,7 +21,7 @@
     box-sizing: border-box; 
     margin: 0;
     p{font-family: "Akshar", Arial, Helvetica, sans-serif;}
-    
+
 }
 body{
     width: 480px;
@@ -132,6 +132,14 @@ main{
 }
 
 .task .content .text {
+    font-family: "Akshar", Arial, Helvetica, sans-serif;
+	color: var(--light);
+	font-size: 1.125rem;
+	width: 100%;
+	display: block;
+	transition: 0.4s;
+}
+.t2{
     font-family: "Akshar", Arial, Helvetica, sans-serif;
 	color: var(--light);
 	font-size: 1.125rem;
