--- a/todostylenew.css
+++ b/todostylenew.css
@@ -122,7 +122,7 @@ main{
     display: flex;
     justify-content: space-between;
     font-family: "Akshar", Arial, Helvetica, sans-serif;
-    background-color: var(--darkest);
+    background-color: var(--darker);
     padding: 1rem;
     border-radius: 1rem;
     margin-bottom: 1rem;
@@ -141,6 +141,7 @@ main{
 }
 .t2{
     font-family: "Akshar", Arial, Helvetica, sans-serif;
+    background-color: var(--light);
 	color: var(--light);
 	font-size: 1.125rem;
 	width: 100%;
