--- a/todostylenew.css
+++ b/todostylenew.css
@@ -39,7 +39,7 @@ body{
     
     margin: 0px;
     margin-top: 10px;
-    background-image: url("Assets/background(more_pixel)(larger).png");
+    background-image: url("Assets/background2.png");
     background-clip: border-box;
     background-size: 500px;
     background-repeat: no-repeat;
