--- a/ACTIVE.css
+++ b/ACTIVE.css
@@ -247,7 +247,7 @@ img
       width: 80px;
       height: 30px;
       border-radius: 5px;
-      padding: .3px;
+      padding: .3px;i hate ib
       font-size: 12px;
       display: flex;
       justify-content: center;
