--- a/ACTIVE.css
+++ b/ACTIVE.css
@@ -52,7 +52,7 @@ body
 
     margin: 0px;
     margin-top: 10px;
-    background-image: url("Assets/background.png");
+    background-image: url("Assets/backgroundN.jpeg");
     background-clip: border-box;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -297,398 +297,3 @@ img
 
 
 
-
-/* credit for code onwards*/
-/*
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-  overflow: hidden;
-}*/
-
-/*
-@function random_range($min, $max) {
-  $rand: random();
-  $random_range: $min + floor($rand * (($max - $min) + 1));
-  @return $random_range;
-}
-.stars {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 120%;
-  transform: rotate(-45deg);
-}
-
-.star {
-  --star-color: #fff;
-  --star-tail-length: 6em;
-  --star-tail-height: 2px;
-  --star-width: calc(var(--star-tail-length) / 6);
-  --fall-duration: 9s;
-  --tail-fade-duration: var(--fall-duration);
-  position: absolute;
-  top: var(--top-offset);
-  left: 0;
-  width: var(--star-tail-length);
-  height: var(--star-tail-height);
-  color: var(--star-color);
-  background: linear-gradient(30deg, currentColor, transparent);
-  border-radius: 50%;
-  filter: drop-shadow(0 0 6px currentColor);
-  transform: translate3d(100em, -50em, 0);
-  animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
-  z-index: -1;
-  position: absolute;
-}
-@media screen and (max-width: 300px) {
-  .star {
-    animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
-  }
-}
-.star:nth-child(1) {
-  --star-tail-length: 6.65em;
-  --top-offset: 1.9vh;
-  --fall-duration: 9.987s;
-  --fall-delay: 2.1s;
-}
-.star:nth-child(2) {
-  --star-tail-length: 6.41em;
-  --top-offset: 87.9vh;
-  --fall-duration: 6.42s;
-  --fall-delay: 9.169s;
-}
-.star:nth-child(3) {
-  --star-tail-length: 5.13em;
-  --top-offset: 63.98vh;
-  --fall-duration: 6.949s;
-  --fall-delay: 0.326s;
-}
-.star:nth-child(4) {
-  --star-tail-length: 7.38em;
-  --top-offset: 26.53vh;
-  --fall-duration: 11.242s;
-  --fall-delay: 1.259s;
-}
-.star:nth-child(5) {
-  --star-tail-length: 5.71em;
-  --top-offset: 75.53vh;
-  --fall-duration: 6.933s;
-  --fall-delay: 7.873s;
-}
-.star:nth-child(6) {
-  --star-tail-length: 6.78em;
-  --top-offset: 83.32vh;
-  --fall-duration: 11.479s;
-  --fall-delay: 8.236s;
-}
-.star:nth-child(7) {
-  --star-tail-length: 5.4em;
-  --top-offset: 28.92vh;
-  --fall-duration: 10.865s;
-  --fall-delay: 6.542s;
-}
-.star:nth-child(8) {
-  --star-tail-length: 5.43em;
-  --top-offset: 84.42vh;
-  --fall-duration: 11.719s;
-  --fall-delay: 2.998s;
-}
-.star:nth-child(9) {
-  --star-tail-length: 5.99em;
-  --top-offset: 69.79vh;
-  --fall-duration: 6.311s;
-  --fall-delay: 3.609s;
-}
-.star:nth-child(10) {
-  --star-tail-length: 7.4em;
-  --top-offset: 14.81vh;
-  --fall-duration: 10.718s;
-  --fall-delay: 1.299s;
-}
-.star:nth-child(11) {
-  --star-tail-length: 7.35em;
-  --top-offset: 22.09vh;
-  --fall-duration: 10.122s;
-  --fall-delay: 8.086s;
-}
-.star:nth-child(12) {
-  --star-tail-length: 5.12em;
-  --top-offset: 17.2vh;
-  --fall-duration: 8.172s;
-  --fall-delay: 0.664s;
-}
-.star:nth-child(13) {
-  --star-tail-length: 7.45em;
-  --top-offset: 51.25vh;
-  --fall-duration: 10.223s;
-  --fall-delay: 1.75s;
-}
-.star:nth-child(14) {
-  --star-tail-length: 6.22em;
-  --top-offset: 7.95vh;
-  --fall-duration: 9.124s;
-  --fall-delay: 8.501s;
-}
-.star:nth-child(15) {
-  --star-tail-length: 5.03em;
-  --top-offset: 63.54vh;
-  --fall-duration: 6.131s;
-  --fall-delay: 4.897s;
-}
-.star:nth-child(16) {
-  --star-tail-length: 6.4em;
-  --top-offset: 29.32vh;
-  --fall-duration: 11.844s;
-  --fall-delay: 6.146s;
-}
-.star:nth-child(17) {
-  --star-tail-length: 6.92em;
-  --top-offset: 85.93vh;
-  --fall-duration: 8.326s;
-  --fall-delay: 3.924s;
-}
-.star:nth-child(18) {
-  --star-tail-length: 6.5em;
-  --top-offset: 26.26vh;
-  --fall-duration: 11.334s;
-  --fall-delay: 8.53s;
-}
-.star:nth-child(19) {
-  --star-tail-length: 6.51em;
-  --top-offset: 26.6vh;
-  --fall-duration: 6.535s;
-  --fall-delay: 3.337s;
-}
-.star:nth-child(20) {
-  --star-tail-length: 6.21em;
-  --top-offset: 3.85vh;
-  --fall-duration: 8.121s;
-  --fall-delay: 6.686s;
-}
-.star:nth-child(21) {
-  --star-tail-length: 5.55em;
-  --top-offset: 43.68vh;
-  --fall-duration: 8.6s;
-  --fall-delay: 6.38s;
-}
-.star:nth-child(22) {
-  --star-tail-length: 6.19em;
-  --top-offset: 36.12vh;
-  --fall-duration: 10.991s;
-  --fall-delay: 1.978s;
-}
-.star:nth-child(23) {
-  --star-tail-length: 6.53em;
-  --top-offset: 63.7vh;
-  --fall-duration: 11.124s;
-  --fall-delay: 2.481s;
-}
-.star:nth-child(24) {
-  --star-tail-length: 5.46em;
-  --top-offset: 79.34vh;
-  --fall-duration: 10.725s;
-  --fall-delay: 8.998s;
-}
-.star:nth-child(25) {
-  --star-tail-length: 6.99em;
-  --top-offset: 31.21vh;
-  --fall-duration: 10.099s;
-  --fall-delay: 7.92s;
-}
-.star:nth-child(26) {
-  --star-tail-length: 6.53em;
-  --top-offset: 75.63vh;
-  --fall-duration: 9.915s;
-  --fall-delay: 1.655s;
-}
-.star:nth-child(27) {
-  --star-tail-length: 7.38em;
-  --top-offset: 86.84vh;
-  --fall-duration: 11.968s;
-  --fall-delay: 9.722s;
-}
-.star:nth-child(28) {
-  --star-tail-length: 6.44em;
-  --top-offset: 94.95vh;
-  --fall-duration: 9.914s;
-  --fall-delay: 5.485s;
-}
-.star:nth-child(29) {
-  --star-tail-length: 6.31em;
-  --top-offset: 15.4vh;
-  --fall-duration: 6.116s;
-  --fall-delay: 6.808s;
-}
-.star:nth-child(30) {
-  --star-tail-length: 6.13em;
-  --top-offset: 28.32vh;
-  --fall-duration: 9.626s;
-  --fall-delay: 3.236s;
-}
-.star:nth-child(31) {
-  --star-tail-length: 5.08em;
-  --top-offset: 62.13vh;
-  --fall-duration: 7.861s;
-  --fall-delay: 7.251s;
-}
-.star:nth-child(32) {
-  --star-tail-length: 5.97em;
-  --top-offset: 90.11vh;
-  --fall-duration: 10.313s;
-  --fall-delay: 9.51s;
-}
-.star:nth-child(33) {
-  --star-tail-length: 7.39em;
-  --top-offset: 47.04vh;
-  --fall-duration: 8.015s;
-  --fall-delay: 3.529s;
-}
-.star:nth-child(34) {
-  --star-tail-length: 5.08em;
-  --top-offset: 39.73vh;
-  --fall-duration: 10.635s;
-  --fall-delay: 4.113s;
-}
-.star:nth-child(35) {
-  --star-tail-length: 7.15em;
-  --top-offset: 40.46vh;
-  --fall-duration: 11.08s;
-  --fall-delay: 3.835s;
-}
-.star:nth-child(36) {
-  --star-tail-length: 6.98em;
-  --top-offset: 45.29vh;
-  --fall-duration: 10.258s;
-  --fall-delay: 8.713s;
-}
-.star:nth-child(37) {
-  --star-tail-length: 6.6em;
-  --top-offset: 14.08vh;
-  --fall-duration: 7.981s;
-  --fall-delay: 7.333s;
-}
-.star:nth-child(38) {
-  --star-tail-length: 6.68em;
-  --top-offset: 78.01vh;
-  --fall-duration: 9.383s;
-  --fall-delay: 0.685s;
-}
-.star:nth-child(39) {
-  --star-tail-length: 7.49em;
-  --top-offset: 72.51vh;
-  --fall-duration: 6.352s;
-  --fall-delay: 3.227s;
-}
-.star:nth-child(40) {
-  --star-tail-length: 7.47em;
-  --top-offset: 47.38vh;
-  --fall-duration: 11.76s;
-  --fall-delay: 2.27s;
-}
-.star:nth-child(41) {
-  --star-tail-length: 5.23em;
-  --top-offset: 86.51vh;
-  --fall-duration: 6.997s;
-  --fall-delay: 2.074s;
-}
-.star:nth-child(42) {
-  --star-tail-length: 5.7em;
-  --top-offset: 95.44vh;
-  --fall-duration: 10.732s;
-  --fall-delay: 9.659s;
-}
-.star:nth-child(43) {
-  --star-tail-length: 6.2em;
-  --top-offset: 65.7vh;
-  --fall-duration: 10.818s;
-  --fall-delay: 2.712s;
-}
-.star:nth-child(44) {
-  --star-tail-length: 5.12em;
-  --top-offset: 56.29vh;
-  --fall-duration: 10.975s;
-  --fall-delay: 4.72s;
-}
-.star:nth-child(45) {
-  --star-tail-length: 7.3em;
-  --top-offset: 8.12vh;
-  --fall-duration: 10.496s;
-  --fall-delay: 1.2s;
-}
-.star:nth-child(46) {
-  --star-tail-length: 6.44em;
-  --top-offset: 0.76vh;
-  --fall-duration: 6.29s;
-  --fall-delay: 2.36s;
-}
-.star:nth-child(47) {
-  --star-tail-length: 5.79em;
-  --top-offset: 33.51vh;
-  --fall-duration: 7.455s;
-  --fall-delay: 4.727s;
-}
-.star:nth-child(48) {
-  --star-tail-length: 7.44em;
-  --top-offset: 22.95vh;
-  --fall-duration: 7.869s;
-  --fall-delay: 0.045s;
-}
-.star:nth-child(49) {
-  --star-tail-length: 7.18em;
-  --top-offset: 39.53vh;
-  --fall-duration: 8.124s;
-  --fall-delay: 0.38s;
-}
-.star:nth-child(50) {
-  --star-tail-length: 6.51em;
-  --top-offset: 59.06vh;
-  --fall-duration: 7.752s;
-  --fall-delay: 6.884s;
-}
-.star::before, .star::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: calc(var(--star-width) / -2);
-  width: var(--star-width);
-  height: 100%;
-  background: linear-gradient(45deg, transparent, currentColor, transparent);
-  border-radius: inherit;
-  animation: blink 2s linear infinite;
-}
-.star::before {
-  transform: rotate(45deg);
-}
-.star::after {
-  transform: rotate(-45deg);
-}
-
-@keyframes fall {
-  to {
-    transform: translate3d(-30em, 0, 0);
-  }
-}
-@keyframes tail-fade {
-  0%, 50% {
-    width: var(--star-tail-length);
-    opacity: 1;
-  }
-  70%, 80% {
-    width: 0;
-    opacity: 0.4;
-  }
-  100% {
-    width: 0;
-    opacity: 0;
-  }
-}
-@keyframes blink {
-  50% {
-    opacity: 0.6;
-  }
-}*/
